[package]
name = "automatedcleaning-rustcore"
version = "1.6.0"
edition = "2021"
description = "Rust compute backend for the AutomatedCleaning Python library"
license = "MIT"

[lib]
# The compiled artifact is imported from Python as `automatedcleaning._rustcore`.
name = "_rustcore"
crate-type = ["cdylib"]

[dependencies]
# abi3-py311 builds a single wheel that works on CPython 3.11+ (stable ABI).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
rayon = "1"
regex = "1"
serde_json = "1"
once_cell = "1"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
