[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
# PyPI requires the normalized (lowercase) distribution name in build artifacts.
# This is the SAME project as "AutomatedCleaning" — `pip install AutomatedCleaning`
# still works because pip normalizes names case-insensitively.
name = "automatedcleaning"
version = "1.6.1"
description = "Automated Data Cleaning Library with a Rust compute backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Abhishek Kumar Singh", email = "dataspoof007@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Python-side runtime dependencies. The heavy per-row/number-crunching work now
# lives in the Rust backend (`automatedcleaning._rustcore`); these libraries
# cover the parts that stay in Python (I/O, ML, dashboards, PII, AI).
dependencies = [
    "polars>=1.23",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=19.0",
    "nltk>=3.9",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "missingno>=0.5",
    "plotly>=6.0",
    "pyfiglet>=1.0",
    "langchain-anthropic>=0.3",
    "presidio-analyzer",
    "presidio-anonymizer",
    # Additional cleaning steps
    "rapidfuzz>=3.0",
    "phonenumbers>=8.13",
    "email-validator>=2.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Extra text-cleaning steps that pull heavier/optional dependencies.
text = [
    "langdetect>=1.0",
    "better-profanity>=0.7",
    "pyspellchecker>=0.8",
]

[project.urls]
Homepage = "https://github.com/DataSpoof/dataspoof-data-cleaning"
Repository = "https://github.com/DataSpoof/dataspoof-data-cleaning"

[tool.maturin]
# Mixed Rust/Python project: the `automatedcleaning` package lives at the repo
# root and the compiled extension is injected into it as `_rustcore`.
python-source = "."
module-name = "automatedcleaning._rustcore"
features = ["pyo3/extension-module"]
